[gd_scene load_steps=11 format=1]

[ext_resource path="res://ui/themes/ImpressiveTitle.tres" type="Theme" id=1]
[ext_resource path="res://ui/CharacterSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/images/backdrop2.png" type="Texture" id=3]
[ext_resource path="res://ui/images/arrow-left.png" type="Texture" id=4]
[ext_resource path="res://ui/images/arrow-right.png" type="Texture" id=5]
[ext_resource path="res://ui/fonts/ConsolaMono.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/images/panel.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 8.0
expand_margin/right = 8.0
expand_margin/top = 8.0
expand_margin/bottom = 8.0
draw_center = true

[sub_resource type="Animation" id=2]

resource/name = "NewCharacterPopup"
length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("NewButton/NewCharacterPopup:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="CharacterSelectScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 728.0
script/script = ExtResource( 2 )

[node name="Frame" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = -728.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="PreviousButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 40.0
margin/right = 80.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="NextButton" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -900.0
margin/top = 40.0
margin/right = -960.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="CharacterNameLabel" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 30.0
margin/right = -870.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.351563, 0, 1 )
text = "Test"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackButton" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = -640.0
margin/right = 200.0
margin/bottom = -680.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="StartButton" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -430.0
margin/top = -640.0
margin/right = -570.0
margin/bottom = -680.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="NewButton" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -780.0
margin/top = -640.0
margin/right = -920.0
margin/bottom = -680.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New"
flat = false

[node name="NewCharacterPopup" type="Panel" parent="NewButton"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 290.0
margin/top = 130.0
margin/right = 70.0
margin/bottom = 60.0
custom_styles/panel = SubResource( 3 )

[node name="MessageLabel" type="Label" parent="NewButton/NewCharacterPopup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
text = "Click here to create a new character."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EditButton" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 820.0
margin/top = 680.0
margin/right = 960.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Edit"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/NewCharacterPopup = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "NewCharacterPopup"

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="NewButton" to="." method="_on_NewButton_pressed"]

[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]


